--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
+
+    <!-- Favicon -->
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="./assets/img/logo-white-square.png"
+    />
+
     <title>Responsive Header with Bootstrap</title>
   </head>
   <body data-bs-spy="scroll" data-bs-target="primary-nav">
