--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Bootstrap Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
 
@@ -58,6 +64,12 @@
             </li>
             <li class="c-menu-item">
               <a href="#contact" class="c-menu-link">Contact</a>
+            </li>
+            <li class="c-menu-item">
+              <button id="theme-toggler" class="btn">
+                <i class="bi bi-moon-stars-fill d-dark-none"></i>
+                <i class="bi bi-brightness-high-fill d-light-none"></i>
+              </button>
             </li>
           </ul>
         </nav>
